--- a/NekoDownloader.Web/appsettings.json
+++ b/NekoDownloader.Web/appsettings.json
@@ -11,7 +11,8 @@
     "Default": "Data Source=192.168.1.51;Initial Catalog=nekodownloader;User ID=sa;Password=1q2w3e*A;Connect Timeout=60;Encrypt=False"
   },
   "AppSettings": {
-    "DownloadPath": "F:\\Downloads",
-    "Url": "http://localhost:5171"
+    "DownloadPath": "/mnt/mangas",
+    "Url": "http://192.168.1.41:1200",
+    "PageEndpoint": "/api/page"
   }
 }
